# render-minigolfmasters

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  README.md  render.yaml
backend/: auth.py  config.py  dependencies.py  email_utils.py  main.py  pyproject.toml  sheets.py
backend/models/: course.py  handicap.py  handicap_request.py  hole.py  par.py  registration.py  round.py  score.py  score_audit_log.py  tournament.py  user.py
backend/routers/: auth.py  contact.py  courses.py  handicap_requests.py  handicaps.py  pars.py  registrations.py  rounds.py  scores.py  tournaments.py  users.py
backend/scripts/: get_gmail_token.py
docs/: tie-playoff-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Banner.jsx  Dialog.jsx  Layout.jsx  LoadingOverlay.jsx  ProtectedRoute.jsx  ScoreGrid.jsx  ScoreStepper.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AcceptInvite.jsx  Account.jsx  Contact.jsx  CourseDetail.jsx  Courses.jsx  History.jsx  Home.jsx  Leaderboard.jsx  Leaderboards.jsx  Login.jsx  PlayerStats.jsx  Players.jsx  Profile.jsx  Registrations.jsx  ResetPassword.jsx  RoundScores.jsx  RoundSelect.jsx  Scorecard.jsx  TournamentDetail.jsx  TournamentRecap.jsx  Tournaments.jsx
frontend/src/pages/admin/: AdminRoundScores.jsx  AllRegistrations.jsx  Dashboard.jsx  ManageCourses.jsx  ManageTournament.jsx  ManageUsers.jsx
frontend/src/utils/: offlineQueue.js
